--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
 a {
   color: #72ace9;
 }
+
+
 .hidden {
   display: none;
 }
@@ -15,4 +17,9 @@ a {
   color:red;
   border:darkred ridge;
   padding: 0.2em;
+}
+
+fieldset {
+  display: inline-block;
+  margin: 0.5em;
 }
