Add "Recently Opened" list feature.
1. Add "Recently Opened" list that displays searching condition recently used. Currently it's just like a logging. We'll add ability to reuse it by loading it into the form .

2. Add [List.js](https://listjs.com/) to handle table element.

3. Introduce experiment mode. "Recently Opened" is still incomplete. So we hide it by default. If you open the page with experiment flag on query string like `index.html?experiment` then the experimental part will be shown.

4. Change label tag style.

--- a/style.css
+++ b/style.css
@@ -37,3 +37,20 @@ fieldset {
 .warning img {
   width:200px;
 }
+
+table {
+  /* width: 100%; */
+  border-collapse: collapse;
+}
+table, th, td {
+  border: 1px solid #90b69b;
+}
+tr:nth-child(odd) {
+  background-color: #2b2c26;
+}
+tr:nth-child(even) {
+  background-color: #34352f;
+}
+.tableContainer {
+  overflow-x:auto;
+}
