Add a feature filtering by author names
Implement simple mechanism mapping form to/from an object with template.

Fix an issue in a case a post doesn't have details but only have title. (postDetails element doesn't exist in this case)

--- a/browser-extension/styles.css
+++ b/browser-extension/styles.css
@@ -1,3 +1,7 @@
+.thinMargin {
+    margin: 2px;
+}
+
 .displayNone {
     display: none;
 }
@@ -6,4 +10,10 @@
     background-color: dimgray;
     color: moccasin;
     width: 300px;
+}
+
+.simpleList {
+    list-style-type: none;
+    padding-inline-start: 0px;
+    margin: 2px;
 }
