Add a feature marking posts by author names

--- a/browser-extension/content_script_canny.css
+++ b/browser-extension/content_script_canny.css
@@ -2,6 +2,9 @@ body .hidePost {
     display: none !important;
 }
 
+.markAuthorPost {
+    background-color: lightgreen;
+}
 .markMyPost {
     background-color: lightblue;
 }
